projects/vb6parse/snapshots/parsers/cst/option_statements/parse_option_explicit_on.snap
---
source: projects/vb6parse/src/parsers/cst/option_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: OptionStatement
      children:
        - kind: OptionKeyword
          text: Option
        - kind: Whitespace
          text: " "
        - kind: ExplicitKeyword
          text: Explicit
        - kind: Whitespace
          text: " "
        - kind: OnKeyword
          text: "On"
        - kind: Newline
          text: "\n"
